# FLEXQL

./: .gitignore  CMakeLists.txt  DESIGN.md  Makefile  README.md  design_doc.tex
benchmarks/: benchmark_flexql.cpp
include/: flexql.h
include/cache/: lru_cache.h
include/common/: flexql.h  types.h
include/index/: hash_index.h
include/network/: network.h  protocol.h
include/parser/: parser.h
include/query/: executor.h
include/server/: session.h
include/storage/: durable_log.h  persistence.h  storage.h
scripts/: benchmark.py  generate_submission_assets.py  package_submission.sh  run.sh  run_benchmarks.sh
src/cache/: lru_cache.cpp
src/client/: flexql_client.cpp  repl.c
src/index/: hash_index.cpp
src/network/: network.cpp
src/parser/: parser.cpp
src/query/: executor.cpp
src/server/: server.cpp  session.cpp
src/storage/: durable_log.cpp  persistence.cpp  storage.cpp
tests/: test_all_cases.cpp  test_main.cpp
